Optimize the deletion process